# uas-flight-logs

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  config.json  layout.json  patch_locations.py  spec.yaml  uas_flight_folio_schema.json
ecoscope-workflows-uas-flight-logs-workflow/: Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-uas-flight-logs-workflow/ecoscope_workflows_uas_flight_logs_workflow/: cli.py  params.json  rjsf.json
ecoscope-workflows-uas-flight-logs-workflow/ecoscope_workflows_uas_flight_logs_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-uas-flight-logs-workflow/tests/: conftest.py  test_metadata.py
ecoscope-workflows-uas-flight-logs-workflow/uas-tasks/: pyproject.toml
ecoscope-workflows-uas-flight-logs-workflow/uas-tasks/uas_tasks/: __init__.py  _binary.py
uas-tasks/uas_tasks/: __init__.py  _binary.py
